# AI-News-Finder

./: .env.example  .gitignore  HOW_TO_USE.md  README.md  pyproject.toml
config/: default.yaml
docs/: github-workflow-daily_brief.yml
examples/: sample_report.md
scripts/: crontab.example  run_daily.ps1
src/news_agent/: __init__.py  cli.py  config_loader.py  settings.py
src/news_agent/clustering/: __init__.py  embedding_cluster.py
src/news_agent/collectors/: __init__.py  base.py  mock_collector.py  reddit_collector.py  rss_collector.py  twitter_collector.py
src/news_agent/filters/: __init__.py  dedupe.py  heuristic.py
src/news_agent/jobs/: __init__.py  daily_pipeline.py
src/news_agent/models/: __init__.py  cluster.py  item.py  scoring.py
src/news_agent/normalizers/: __init__.py  item_builder.py
src/news_agent/prompts/: __init__.py  ai_slop_signals_v1.txt  daily_brief_v1.txt  post_quality_v1.txt  story_importance_v1.txt
src/news_agent/reporting/: __init__.py  exporters.py
src/news_agent/scoring/: __init__.py  final.py  llm_models.py  openai_scorer.py
src/news_agent/storage/: __init__.py  db.py  orm.py  repository.py
src/news_agent/summarization/: __init__.py  daily_brief.py
src/news_agent/utils/: __init__.py  hashing.py  logging.py  openai_client.py  prompts.py
tests/: test_clustering_pseudo_embedding.py  test_daily_brief_diversity.py  test_daily_brief_resilience.py  test_daily_pipeline_smoke.py  test_dedupe.py  test_heuristic.py  test_rss_timezone.py  test_scoring_final.py
tests/fixtures/: smoke_config.yaml
